# rl-translation-cycles

./: .gitignore  .gitmodules  CLAUDE.md  README.md  plot_roundtrip.py  pyproject.toml  ruff.toml  run.py
configs/: translation-cycles-qwen3.5-9b.toml  translation-cycles.toml
data/: flores_plus_langs.csv
environments/flores_eval/: README.md  flores_eval.py
environments/translation_cycles/: pyproject.toml  translation_cycles.py
experiments/aya_expanse/: train_deu.cfg
experiments/llama/: corr_deu.cfg  repro.cfg  train_deu.cfg
experiments/llama3_grpo/: eval.cfg  train.cfg  train_tiny.cfg  train_tiny_fwd_only.cfg
experiments/nllb/: fwd_fineweb.cfg  fwd_only.cfg  repro.cfg  repro_fineweb.cfg
experiments/qwen3_0.6b/: train_deu.cfg  train_fra.cfg  train_npi.cfg
experiments/qwen3_0.6b_grpo/: eval.cfg  train.cfg  train_deu.cfg  train_fra.cfg  train_npi.cfg  train_tiny.cfg  train_tiny_bwd_only.cfg  train_tiny_fwd_only.cfg
experiments/test_cpu/: train.cfg
experiments/test_local/: train.cfg
prime/configs/: translation-cycles.toml
prime/environments/: AGENTS.md
prime/environments/flores_eval/: flores_eval.py  pyproject.toml
prime/environments/translation_cycles/: README.md  pyproject.toml  translation_cycles.py
scripts/: delta_ddp.sh  delta_single.sh  prepare_data.sh  rc.sh  rc_40.sh  rc_clearlab.sh  run_ddp.sh  run_eval.sh  run_single_gpu.sh  run_single_gpu_rc.sh
src/: data.py  distributed.py  evaluate.py  evaluate_correlation.py  train.py
src/config/: __init__.py  config.py  config_to_dataclass.py  experiment_config.py  pip_freeze.py
src/data/: loading.py
src/evaluation/: evaluate.py
src/modeling/: generation.py  grpo.py  mem_profile.py  prompts.py  rewards.py
