[project]
name = "rl-translation-cycles"
version = "0.1.0"
description = "GRPO training for low-resource translation via cycle consistency"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.14,<4",
    "nltk>=3.9.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "sacrebleu>=2.6.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "verifiers>=0.1.11",
    "wandb>=0.24.2",
]

[project.optional-dependencies]
cuda = ["flash-attn>=2.5.0"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-tqdm>=4.67.3.20260205",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pyright]
reportPrivateImportUsage = "none"
