[project]
name = "flores-eval"
description = "FLORES eval environment"
tags = ["translation", "cycle-consistency", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
    "datasets>=2.14,<4",
    "sacrebleu>=2.6.0",
    "nltk==3.9.4",
    "pandas==3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["flores_eval.py", "pyproject.toml"]

[tool.prime]
secrets = ["HF_TOKEN_FLORES"]
